--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <meta name="keywords" content="mindfulness, community, inner peace, meditation, wellness">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Your Name">
+    <!-- Open Graph meta tags -->
+    <meta property="og:title" content="Mindfulness Community">
+    <meta property="og:description" content="Join the Mindfulness Community for mindfulness and inner peace. Connect with like-minded individuals and share your experiences.">
+    <meta property="og:image" content="https://example.com/assets/hero.jpg">
+    <meta property="og:url" content="https://example.com">
+    <meta property="og:type" content="website">
     <title>Mindfulness Community</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
@@ -119,10 +125,10 @@
 </head>
 <body>
     <header>
-        <button id="sidebarToggle" class="sidebar-toggle">☰</button>
+        <button id="sidebarToggle" class="sidebar-toggle" aria-label="Toggle sidebar">☰</button>
         <nav class="navbar">
             <div class="navbar__brand">
-                <img src="./assets/logo.png" alt="logo" class="navbar__logo">
+                <img src="./assets/logo.png" alt="Mindfulness Community Logo" class="navbar__logo" loading="lazy">
             </div>
             <div class="navbar__nav__items">
                 <button class="nav__item button__primary">Join Community</button>
@@ -146,9 +152,9 @@
         <!-- Hero Section -->
         <section class="hero__container">
             <div class="hero__image__container">
-                <img class="hero__image animated" src="./assets/hero.jpg" alt="hero image">
-                <img src="./assets/svg/heroShape.svg" alt="hero image shape" class="hero__image__shape">
-                <img src="./assets/svg/herobgpattren.svg" alt="hero image shape" class="hero__image__pattern">
+                <img class="hero__image animated" src="./assets/hero.jpg" alt="Hero Image" loading="lazy">
+                <img src="./assets/svg/heroShape.svg" alt="Hero Image Shape" class="hero__image__shape" loading="lazy">
+                <img src="./assets/svg/herobgpattren.svg" alt="Hero Image Pattern" class="hero__image__pattern" loading="lazy">
             </div>
             <div class="hero__description">
                 <h1 class="hero__text">
@@ -161,7 +167,9 @@
         <!-- Video Section -->
         <section class="video__footage__container">
             <div class="video__fotage">
-                <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/251192195?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0"></iframe></div>
+                <div style="padding:56.25% 0 0 0;position:relative;">
+                    <iframe src="https://player.vimeo.com/video/251192195?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" loading="lazy"></iframe>
+                </div>
             </div>
             <div class="video__footage__text">
                 <p>
@@ -177,7 +185,7 @@
             <div class="explore__programs__list">
                 <!-- Meditation Card -->
                 <div class="program__card">
-                    <img src="./assets/meditation.jpg" alt="meditation image" class="program__image">
+                    <img src="./assets/meditation.jpg" alt="Meditation Image" class="program__image" loading="lazy">
                     <div class="program__card__description">
                         <h3 class="program__title">Meditation</h3>
                         <p class="program__details">Guided sessions, Mindfulness practices<span style="color: red;">+3</span></p>
@@ -186,7 +194,7 @@
 
                 <!-- Yoga Card -->
                 <div class="program__card" id="yoga__card">
-                    <img src="./assets/yoga.jpg" alt="yoga image" class="program__image">
+                    <img src="./assets/yoga.jpg" alt="Yoga Image" class="program__image" loading="lazy">
                     <div class="program__card__description">
                         <h3 class="program__title">Yoga</h3>
                         <p class="program__details">Asanas, Pranayama<span style="color: red;">+3</span></p>
@@ -195,7 +203,7 @@
 
                 <!-- Wellness Retreats Card -->
                 <div class="program__card">
-                    <img src="./assets/wellness_retreat.jpg" alt="wellness retreat image" class="program__image">
+                    <img src="./assets/wellness_retreat.jpg" alt="Wellness Retreat Image" class="program__image" loading="lazy">
                     <div class="program__card__description">
                         <h3 class="program__title">Wellness Retreats</h3>
                         <p class="program__details">Relaxation, Detox<span style="color: red;">+3</span></p>
@@ -213,18 +221,18 @@
             <div class="community__flex">
                 <div class="community__flex__row__one">
                     <div class="community__1">
-                        <img class="community__1__image" src="./assets/community1.jpg" alt="community__1">
+                        <img class="community__1__image" src="./assets/community1.jpg" alt="Community Image 1" loading="lazy">
                     </div>
                     <div class="community__2">
-                        <img class="community__2__image" src="./assets/community2.jpg" alt="community__2">
+                        <img class="community__2__image" src="./assets/community2.jpg" alt="Community Image 2" loading="lazy">
                     </div>
                 </div>
                 <div class="community__flex__row__two">
                     <div class="community__3">
-                        <img class="community__3__image" src="./assets/community3.jpg" alt="community__3">
+                        <img class="community__3__image" src="./assets/community3.jpg" alt="Community Image 3" loading="lazy">
                     </div>
                     <div class="community__4">
-                        <img class="community__4__image" src="./assets/community4.jpg" alt="community__4">
+                        <img class="community__4__image" src="./assets/community4.jpg" alt="Community Image 4" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -251,7 +259,7 @@
     </main>
 
     <footer>
-        <img src="./assets/logo.png" alt="logo">
+        <img src="./assets/logo.png" alt="Mindfulness Community Logo" loading="lazy">
         <ul>
             <li><a href="#">Pricing</a></li>
             <li><a href="#">Terms and condition</a></li>
@@ -261,7 +269,7 @@
         </ul>
     </footer>
 
-    <script>
+    <script defer>
         document.getElementById('sidebarToggle').addEventListener('click', function () {
             var sidebar = document.getElementById('sidebar');
             if (sidebar.style.display === 'none' || sidebar.style.display === '') {
@@ -282,5 +290,4 @@
         });
     </script>
 </body>
-                </html> 
-
+    </html>
