--- a/dAPP.html
+++ b/dAPP.html
@@ -78,6 +78,88 @@
             width: 100%;
             bottom: 0;
         }
+
+        /* Button 34 Styles */
+        .btn-34,
+        .btn-34 *,
+        .btn-34:after,
+        .btn-34:before {
+          border: 0 solid;
+          box-sizing: border-box;
+        }
+
+        .btn-34 {
+          -webkit-tap-highlight-color: transparent;
+          -webkit-appearance: button;
+          -moz-appearance: button;
+          appearance: button;
+          background-color: #000; /* Black background */
+          background-image: none;
+          color: #fff;
+          cursor: pointer;
+          font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+            Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
+            Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+          font-size: 100%;
+          font-weight: 900;
+          line-height: 1.5;
+          margin: 0;
+          mask-image: radial-gradient(#000, #fff);
+          padding: 0;
+          text-transform: uppercase;
+          border-radius: 99rem;
+          border-width: 2px;
+          overflow: hidden;
+          padding: 0.8rem 3rem;
+          position: relative;
+        }
+
+        .btn-34:disabled {
+          cursor: default;
+        }
+
+        .btn-34:focus {
+          outline: 2px solid #fff;
+        }
+
+        .btn-34:-moz-focusring {
+          outline: auto;
+        }
+
+        .btn-34 svg {
+          display: block;
+          vertical-align: middle;
+        }
+
+        .btn-34 [hidden] {
+          display: none;
+        }
+
+        .btn-34:hover {
+          transform: scale(1.1);
+        }
+
+        .btn-34 span {
+          font-weight: 900;
+          mix-blend-mode: difference;
+        }
+
+        .btn-34:before {
+          aspect-ratio: 1;
+          background: #fff;
+          border-radius: 50%;
+          content: "";
+          left: 50%;
+          position: absolute;
+          top: 50%;
+          transform: translate(-50%, -50%);
+          transition: width 0.2s;
+          width: 0;
+        }
+
+        .btn-34:hover:before {
+          width: 100%;
+        }
     </style>
 </head>
 <body>
@@ -93,6 +175,10 @@
         <section>
             <h2>About this dApp</h2>
             <p>This is a sample voting dApp frontend. In future updates, this dApp will be expanded with smart contract integration, allowing for decentralized and transparent voting for wellness professionals.</p>
+        </section>
+        <section>
+            <h2>Special Button</h2>
+            <button class="btn-34"><span>Special Button</span></button>
         </section>
     </main>
     <footer>
