--- a/dAPP.html
+++ b/dAPP.html
@@ -6,7 +6,160 @@
     <title>Mindfulness dAPP</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
-        /* Existing styles */
+        body {
+            background-color: #ffffff;
+            color: #333;
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background: linear-gradient(90deg, #4CAF50, #388E3C);
+            padding: 20px;
+            text-align: center;
+            color: white;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        header img {
+            height: 40px;
+            vertical-align: middle;
+            margin-right: 10px;
+        }
+        main {
+            padding-top: 100px;
+            max-width: 800px;
+            margin: auto;
+        }
+        .wellness-professionals {
+            margin: 20px 0;
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            background-color: #f9f9f9;
+        }
+        .wellness-professionals h3 {
+            margin-top: 0;
+        }
+        button.vote-button, button.stake-button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 15px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 10px;
+            cursor: pointer;
+            border: none;
+            border-radius: 12px;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+        button.vote-button:hover, button.stake-button:hover {
+            background-color: #45a049;
+            transform: scale(1.1);
+        }
+        button.vote-button:active, button.stake-button:active {
+            transform: scale(0.9);
+        }
+        .result {
+            margin-top: 20px;
+            font-size: 18px;
+            font-weight: 500;
+        }
+        footer {
+            background: #4CAF50;
+            padding: 10px;
+            text-align: center;
+            color: white;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+
+        /* Button 34 Styles */
+        .btn-34,
+        .btn-34 *,
+        .btn-34:after,
+        .btn-34:before {
+          border: 0 solid;
+          box-sizing: border-box;
+        }
+
+        .btn-34 {
+          -webkit-tap-highlight-color: transparent;
+          -webkit-appearance: button;
+          -moz-appearance: button;
+          appearance: button;
+          background-color: #000; /* Black background */
+          background-image: none;
+          color: #fff;
+          cursor: pointer;
+          font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+            Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
+            Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+          font-size: 100%;
+          font-weight: 900;
+          line-height: 1.5;
+          margin: 0;
+          mask-image: radial-gradient(#000, #fff);
+          padding: 0;
+          text-transform: uppercase;
+          border-radius: 99rem;
+          border-width: 2px;
+          overflow: hidden;
+          padding: 0.8rem 3rem;
+          position: relative;
+        }
+
+        .btn-34:disabled {
+          cursor: default;
+        }
+
+        .btn-34:focus {
+          outline: 2px solid #fff;
+        }
+
+        .btn-34:-moz-focusring {
+          outline: auto;
+        }
+
+        .btn-34 svg {
+          display: block;
+          vertical-align: middle;
+        }
+
+        .btn-34 [hidden] {
+          display: none;
+        }
+
+        .btn-34:hover {
+          transform: scale(1.1);
+        }
+
+        .btn-34 span {
+          font-weight: 900;
+          mix-blend-mode: difference;
+        }
+
+        .btn-34:before {
+          aspect-ratio: 1;
+          background: #fff;
+          border-radius: 50%;
+          content: "";
+          left: 50%;
+          position: absolute;
+          top: 50%;
+          transform: translate(-50%, -50%);
+          transition: width 0.2s;
+          width: 0;
+        }
+
+        .btn-34:hover:before {
+          width: 100%;
+        }
     </style>
 </head>
 <body>
