--- a/dAPP.html
+++ b/dAPP.html
@@ -174,8 +174,8 @@
                 <p>This is a sample voting dApp frontend. In future updates, this dApp will be expanded with smart contract integration, allowing for decentralized and transparent voting for wellness professionals.</p>
             </section>
             <section>
-                <h2>Special Button</h2>
-                <button id="hivesigner-login" class="btn-34"><span>Special Button</span></button>
+                <h2>HiveSigner</h2>
+                <button id="hivesigner-login" class="btn-34"><span>HiveSigner</span></button>
             </section>
         </div>
     </main>
