--- a/service.html
+++ b/service.html
@@ -16,17 +16,54 @@
         h2 {
             color: #555;
         }
+        .more-info {
+            display: none;
+            margin-top: 10px;
+        }
+        .service {
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
     <h1>Our Services</h1>
-    <h2>Life Coaching</h2>
-    <p>Our life coaching services are designed to help you achieve your personal and professional goals. Through one-on-one sessions, we work with you to identify your strengths, overcome obstacles, and create a clear path to success. Whether you're looking to improve your career, relationships, or overall well-being, our life coaches are here to guide and support you every step of the way.</p>
-    
-    <h2>Holistic Health</h2>
-    <p>Holistic health focuses on the well-being of the whole person—mind, body, and spirit. Our holistic health services include nutritional counseling, stress management techniques, and alternative therapies such as yoga and meditation. By addressing all aspects of your health, we help you achieve balance and harmony in your life.</p>
-    
-    <h2>Lucid Dream Coaching</h2>
-    <p>Lucid dreaming is the art of becoming aware that you are dreaming while you are still in the dream state. Our lucid dream coaching services teach you techniques to enhance your dream awareness and take control of your dreams. Through guided practices and personalized support, you can use lucid dreaming to explore your subconscious, overcome fears, and gain valuable insights into your waking life.</p>
+
+    <div class="service">
+        <h2>Life Coaching</h2>
+        <p>Our life coaching services are designed to help you achieve your personal and professional goals. Through one-on-one sessions, we work with you to identify your strengths, overcome obstacles, and create a plan for success.</p>
+        <button onclick="toggleInfo('life-coaching')">More Information</button>
+        <div id="life-coaching" class="more-info">
+            <p>Additional information about Life Coaching...</p>
+        </div>
+    </div>
+
+    <div class="service">
+        <h2>Holistic Health</h2>
+        <p>Holistic health focuses on the well-being of the whole person—mind, body, and spirit. Our holistic health services include nutritional counseling, stress management techniques, and alternative therapies.</p>
+        <button onclick="toggleInfo('holistic-health')">More Information</button>
+        <div id="holistic-health" class="more-info">
+            <p>Additional information about Holistic Health...</p>
+        </div>
+    </div>
+
+    <div class="service">
+        <h2>Lucid Dream Coaching</h2>
+        <p>Lucid dreaming is the art of becoming aware that you are dreaming while you are still in the dream state. Our lucid dream coaching services teach you techniques to enhance your dream awareness and control.</p>
+        <button onclick="toggleInfo('lucid-dream-coaching')">More Information</button>
+        <div id="lucid-dream-coaching" class="more-info">
+            <p>Additional information about Lucid Dream Coaching...</p>
+        </div>
+    </div>
+
+    <script>
+        function toggleInfo(serviceId) {
+            const info = document.getElementById(serviceId);
+            if (info.style.display === "none" || info.style.display === "") {
+                info.style.display = "block";
+            } else {
+                info.style.display = "none";
+            }
+        }
+    </script>
 </body>
-    </html>
+</html>
